--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ requires-python = "^3.11"
 dependencies = [
     "biopython >=1.85",
     "pandas >=2.0.0",
-    "argparse (>=1.4.0,<2.0.0)"
+    "argparse (>=1.4.0,<2.0.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "typer (>=0.15.1,<0.16.0)"
 ]
 
 
